# flybody

./: .gitignore  README.md  flybody.yml  pyproject.toml  setup.py
.github/workflows/: lint.yml  pytest.yml  pyversions.yml  tf-test.yml
docs/: controller-reuse-vision-flight.ipynb  fly-on-ball-minimal.ipynb  sensory-input-tracking.ipynb
flybody/: download_data.py  ellipsoid_fluid_model.py  fly_envs.py  inverse_kinematics.py  loggers.py  quaternions.py  train_dmpo_ray.py  utils.py
flybody/agents/: actors.py  agent_dmpo.py  counting.py  learning_dmpo.py  losses_mpo.py  network_factory.py  network_factory_vis.py  ray_distributed_dmpo.py  remote_as_local_wrapper.py  tf_utils.py  utils_ray.py  utils_tf.py
flybody/fruitfly/: fruitfly.py
flybody/fruitfly/assets/: fruitfly.xml
flybody/fruitfly/build_fruitfly/: README.md  add_flyid_labels.py  fruitfly.xml  fuse_fruitfly.py  make_fruitfly.py
flybody/fruitfly/build_fruitfly/assets/: drosophila_defaults.xml
flybody/tasks/: base.py  constants.py  flight_imitation.py  pattern_generators.py  rewards.py  synthetic_trajectories.py  task_utils.py  template_task.py  trajectory_loaders.py  vision_flight.py  walk_imitation.py  walk_on_ball.py
flybody/tasks/arenas/: ball.py  hills.py
notebooks/: fly-on-ball-minimal.ipynb
tests/: common.py  test-tf.py  test_core.py  test_flybare.py  test_flymodel.py  test_flywalker.py  test_walking_env.py
